# trajectory

./: .gitignore  Caddyfile.dev  Caddyfile.example  README.md  docker-compose-dev.yaml  docker-compose.dev.yaml  docker-compose.yaml
server/: .dockerignore  Cargo.toml  Dockerfile  Dockerfile-dev  Dockerfile.dev
server/migrations/2021-05-15-024246_create_users_table/: up.sql
server/src/: main.rs  models.rs  schema.rs
web/: .dockerignore  Dockerfile  Dockerfile-dev  package.json  pnpm-lock.yaml  rollup.config.js
web/public/: global.css  index.html
web/src/: Account.svelte  App.svelte  CreateAccount.svelte  Dasbhoard.svelte  Import.svelte  Login.svelte  Program.svelte  classes.ts  gpa_table_presets.ts
web/src/components/: Centered.svelte  CourseGraph.svelte  CourseList.svelte  GradeTable.svelte  Header.svelte  Theme.svelte
