[package]
name = "trajectory-server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
diesel = { version = "1.4.5", features = ["r2d2", "postgres"] }
diesel_migrations = "1.4.0"
rust-crypto = "^0.2"
rand = "0.5.0"
getrandom = "0.2"
dotenv = "0.15.0"
serde = "1"
serde_json = "1"
base64 = "0.13"
